fix for calendar break on statistic while cross-site cookies are disabled

--- a/calendar/screen.css
+++ b/calendar/screen.css
@@ -77,5 +77,4 @@ input:checked + label{
   flex: 1;
   min-height: 600px;
   flex-shrink: 0;
-  background-color: #ff0000;
 }
